# pirouette

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  docker-dev.sh  pirouette.toml  rustfmt.toml
.github/workflows/: ci.yml  docker-publish.yml  publish.yml  publish_container.yml  publish_crate.yml
docs/: environment.md
src/: check_targets.rs  clean.rs  configuration.rs  current_state.rs  main.rs  snapshot.rs
