[package]
name = "pirouette"
description = "A log/backup rotation tool."
version = "0.3.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/tquin/pirouette"
readme = "README.md"
keywords = ["backup", "rotate", "log"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
env_logger = "0.11.8"
flate2 = "1.1.0"
in-container = "1.1.0"
log = "0.4.27"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
tar = "0.4.44"
temp-env = "0.3.6"
toml = "0.8.20"
uu_cp = "0.0.30"

[profile.release]
debug = true
