[package]
name = "pirouette"
description = "A log/backup rotation tool."
version = "0.4.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/tquin/pirouette"
readme = "README.md"
keywords = ["backup", "rotate", "log"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
env_logger = "0.11.8"
flate2 = "1.1.0"
glob = "0.3.2"
in-container = "1.1.0"
log = "0.4.27"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
tar = "0.4.44"
temp-env = "0.3.6"
toml = "0.8.20"
walkdir = "2.5.0"

[build]
jobs = 16                 # Set to your CPU core count
rustc-wrapper = "sccache" # Enables disk caching
pipelining = true         # Enables build pipelining

[profile.dev]
incremental = true        # Enable incremental compilation
codegen-units = 16        # Enables parallel code generation

[profile.release]
debug = true

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld"]
